I added new projects

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
     header {
       text-align: center;
-      background: url("images/banner.jpg");
+      background: url("http://www.planwallpaper.com/static/images/wallpaper_wallpapers_image_love_nature_cool_bestwallpaper022.jpg");
       background-size: cover;
       color: white;
     }
